Enhance layout and styling with new components and assets. Added multiple decorative SVG icons, updated the header and footer styles, and improved the homepage layout with a new introduction section. Integrated new images and refined CSS for better responsiveness and visual appeal.

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,8 +1,12 @@
 @use "../../styles/_variables.scss" as *;
 
 .Header {
+  width: 100%;
+  z-index: 100;
+  background-color: $background-color;
   padding-block: 1rem;
   border-bottom: 0.25px solid $gray;
+  position: fixed;
   &-container {
     margin: 0 auto;
     width: $container-width;
@@ -31,14 +35,17 @@
   &-item {
     display: flex;
     align-items: center;
+    padding: 0.5rem;
+    &:hover {
+      a {
+        color: $black;
+        font-family: "Poppins SemiBold", "Poppins", sans-serif;
+      }
+    }
     a {
       color: $gray;
       font-size: 12px;
       font-family: "Poppins Light", "Poppins", sans-serif;
-      &:hover {
-        color: $primary-color;
-        font-family: "Poppins SemiBold", "Poppins", sans-serif;
-      }
     }
   }
   &-right {
@@ -49,7 +56,6 @@
       display: flex;
       align-items: center;
       justify-content: center;
-
       width: 2.5rem;
       height: 2.5rem;
       cursor: pointer;
