--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,23 @@
 @import "tailwindcss";
 @import "./styles/variables.scss";
+@import "./styles/main.scss";
 
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background-color: #f9f8f4;
 }
 
 a {
   font-family: "Poppins", sans-serif;
   text-decoration: none;
+}
+
+p {
+  font-family: "Poppins Regular", sans-serif;
+  font-size: 14px;
+  color: #828282;
+  line-height: 162%;
 }
