--- a/src/pages/Homepage/Introduction/Introduction.module.scss
+++ b/src/pages/Homepage/Introduction/Introduction.module.scss
@@ -1,2 +1,207 @@
+@import "../../../styles/variables.scss";
+
 .Introduction {
+  width: 100%;
+  height: 100vh;
+  margin-top: 3rem;
+  &-container {
+    padding-block: 3rem;
+    margin: 0 auto;
+    width: $container-width;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 3rem;
+    align-items: center;
+    h1 {
+      width: 100%;
+      font-family: "Poppins SemiBold";
+      font-size: 4.5rem;
+      color: $black;
+      line-height: 95px;
+      position: relative;
+      margin-bottom: -1rem;
+      span {
+        position: absolute;
+        top: 45%;
+        right: 25%;
+      }
+    }
+  }
+  &-left {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 3rem;
+    &-top {
+      position: relative;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      margin-left: 2rem;
+      gap: 1rem;
+      p {
+        width: 60%;
+        font-family: "Poppins Light";
+        font-size: 12px;
+        color: $gray;
+        line-height: 1.62;
+      }
+      &-button {
+        width: 30%;
+        padding: 0.7rem 1.2rem;
+        background-color: $secondary-color;
+        p {
+          font-family: "Poppins Medium";
+          font-size: 14px;
+          color: $white;
+          line-height: 1.62;
+        }
+      }
+    }
+    &-bottom {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      padding-left: 8rem;
+      flex-direction: row;
+      position: relative;
+      gap: 1rem;
+      &-decorate {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+      }
+      &-content {
+        padding: 1rem;
+        border-radius: 10px;
+        width: 40%;
+        background-color: #efefef;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
+        h2 {
+          font-family: "Poppins SemiBold";
+          font-size: 20px;
+          color: $black;
+          line-height: 1.7;
+          span {
+            color: $primary-color;
+          }
+        }
+      }
+      &-content2 {
+        padding: 1.5rem 1rem;
+        border-radius: 20px;
+        width: 60%;
+        background-color: #efefef;
+        position: relative;
+        overflow: hidden;
+
+        &::after {
+          content: "";
+          position: absolute;
+          top: 0;
+          right: 0;
+          width: 35%;
+          height: 35%;
+          background-color: #f9f8f4;
+          border-top-right-radius: 20px;
+          z-index: 1;
+        }
+        &-image {
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start;
+          align-items: flex-start;
+          gap: 1rem;
+          position: relative;
+          &-decorate {
+            position: absolute;
+            bottom: 0;
+            right: 0;
+          }
+          &-decorate2 {
+            position: absolute;
+            bottom: 0;
+            right: 0;
+          }
+          img {
+            width: 60%;
+            border-radius: 10px;
+            object-fit: cover;
+          }
+          p {
+            width: 80%;
+            font-family: "Poppins SemiBold";
+            font-size: 18px;
+            color: $black;
+            line-height: 1.5;
+          }
+        }
+      }
+    }
+  }
+  &-image-decorate2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    width: 30%;
+    height: 30%;
+    background-color: #efefef;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10;
+  }
+  &-number {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+    justify-content: flex-end;
+    align-items: flex-end;
+    p {
+      font-family: "Poppins SemiBold";
+      font-size: 32px;
+      color: $primary-color;
+    }
+    span {
+      font-family: "Poppins Light";
+      font-size: 10px;
+      color: $primary-color;
+    }
+  }
+  &-decorate2 {
+    position: absolute;
+    top: 60%;
+    right: 10%;
+  }
+  &-right {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    &-decorate {
+      width: 88%;
+      svg {
+        width: 100%;
+        height: 100%;
+      }
+    }
+    &-image {
+      position: absolute;
+      bottom: -20%;
+      right: 0;
+      width: 100%;
+    }
+  }
 }
