--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -52,56 +52,63 @@
 
 @font-face {
   font-family: "Poppins";
-  src: url("../assets/fonts/Poppins-Regular.otf") format("opentype");
+  src: url($font-poppins-regular) format("opentype");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Poppins Medium";
-  src: url("../assets/fonts/Poppins-Medium.otf") format("opentype");
+  src: url($font-poppins-medium) format("opentype");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Poppins Bold";
-  src: url("../assets/fonts/Poppins-Bold.otf") format("opentype");
+  src: url($font-poppins-bold) format("opentype");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Poppins SemiBold";
-  src: url("../assets/fonts/Poppins-SemiBold.otf") format("opentype");
+  src: url($font-poppins-semi-bold) format("opentype");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Poppins Extra Bold";
-  src: url("../assets/fonts/Poppins-ExtraBold.otf") format("opentype");
+  src: url($font-poppins-extra-bold) format("opentype");
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Poppins Black";
-  src: url("../assets/fonts/Poppins-Black.otf") format("opentype");
+  src: url($font-poppins-black) format("opentype");
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
+  font-family: "Poppins Regular";
+  src: url($font-poppins-regular) format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
   font-family: "Poppins Extra Light";
-  src: url("../assets/fonts/Poppins-ExtraLight.otf") format("opentype");
+  src: url($font-poppins-extra-light) format("opentype");
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Poppins Light";
-  src: url("../assets/fonts/Poppins-Light.otf") format("opentype");
+  src: url($font-poppins-light) format("opentype");
   font-weight: 300;
   font-style: normal;
 }
