--- a/src/pages/Homepage/Shopping/Shopping.module.scss
+++ b/src/pages/Homepage/Shopping/Shopping.module.scss
@@ -36,4 +36,16 @@
     width: 100%;
     height: 160px;
   }
+  &-products {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 2rem;
+  }
+  &-filter {
+    grid-column: 1 / 4;
+  }
+  &-list {
+    grid-column: 4 / 13;
+  }
 }
