--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+
   &-header {
     font-family: "Poppins SemiBold";
     font-size: 14px;
@@ -23,6 +24,55 @@
         background-color: #eff3f3;
         color: $black;
       }
+    }
+  }
+  &-price {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    &-min,
+    &-max {
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      p {
+        font-family: "Poppins SemiBold";
+        font-size: 12px;
+        color: $gray;
+      }
+
+      input {
+        width: 100%;
+        border: 1px solid $gray;
+        border-radius: 0.5rem;
+        padding: 0.75rem;
+        font-size: 14px;
+        font-family: "Poppins Regular";
+        color: $black;
+        ::placeholder {
+          font-family: "Poppins Light";
+          font-size: 12px;
+          color: $gray;
+        }
+      }
+    }
+  }
+  &-button {
+    width: 100%;
+    height: 100%;
+    background-color: $primary-color;
+    padding: 0.75rem 1.5rem;
+    border-top-left-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+    border-bottom-right-radius: 0;
+    p {
+      color: $white !important;
+      font-family: "Poppins Medium";
+      font-size: 14px !important;
+      color: $white;
+      line-height: 1.62;
     }
   }
 }
