--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -23,6 +23,8 @@
   &-logo {
     &-link {
       img {
+        width: 90%;
+        height: 100%;
         margin-top: 0.8rem;
       }
     }
@@ -44,14 +46,14 @@
     }
     a {
       color: $gray;
-      font-size: 12px;
+      font-size: 11px;
       font-family: "Poppins Light", "Poppins", sans-serif;
     }
   }
   &-right {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 0.45rem;
     &-item {
       display: flex;
       align-items: center;
@@ -65,6 +67,7 @@
         background-color: $secondary-color;
         svg {
           path {
+            width: 90% !important;
             stroke: $white;
           }
         }
@@ -72,8 +75,8 @@
       }
     }
     &-img {
-      width: 2rem;
-      height: 2rem;
+      width: 1.75rem;
+      height: 1.75rem;
       border-radius: 50%;
       cursor: pointer;
       object-fit: cover;
