--- a/src/components/commons/Button.module.scss
+++ b/src/components/commons/Button.module.scss
@@ -11,7 +11,7 @@
   border-bottom-right-radius: 0.1rem;
   cursor: pointer;
 
-  &:hover {
-    background-color: $primary-color;
-  }
+  // &:hover {
+  //   background-color: $primary-color;
+  // }
 }
