--- a/src/pages/Homepage/Shopping/Shopping.module.scss
+++ b/src/pages/Homepage/Shopping/Shopping.module.scss
@@ -8,7 +8,6 @@
     width: $container-width;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
     justify-content: center;
     align-items: flex-start;
   }
@@ -21,7 +20,7 @@
     gap: 0.5rem;
     h2 {
       font-family: "Poppins SemiBold";
-      font-size: 2.5rem;
+      font-size: 2.2rem;
       color: $black;
       line-height: 1.62;
     }
@@ -33,67 +32,120 @@
     }
   }
   &-categories {
+    margin-top: 2rem;
     width: 100%;
     height: 160px;
   }
   &-products {
     width: 100%;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    display: flex;
+    flex-direction: row;
     gap: 2rem;
   }
   &-filter {
-    grid-column: 1 / 4;
+    width: 23%;
   }
   &-list {
-    grid-column: 4 / 13;
+    width: 77%;
+    margin-top: -0.6rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
     &-header {
       width: 100%;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
+
       &-left {
         width: 50%;
         display: flex;
         flex-direction: row;
-        gap: 0.5rem;
+        gap: 0.25rem;
         align-items: center;
         p {
           padding-inline: 0.5rem;
           border-radius: 0.5rem;
           font-family: "Poppins SemiBold";
-          font-size: 14px;
+          font-size: 12px;
           line-height: 1.62;
           color: $black;
         }
         span {
-          padding: 0.5rem 1rem;
+          padding: 0.25rem 0.5rem;
           border-radius: 100rem;
           font-family: "Poppins SemiBold" !important;
           background-color: #eff3f3 !important;
-          font-size: 12px;
+          font-size: 10px;
           color: $primary-color;
         }
       }
       &-right {
+        width: 35%;
         display: flex;
         flex-direction: row;
         gap: 0.5rem;
         align-items: center;
         justify-content: flex-end;
-        > .item {
-          padding: 0.5rem;
+        &-item {
+          width: 36px;
+          aspect-ratio: 1/1;
+          border: 0.5px solid $gray;
+          padding: 0.5rem 0.66rem;
           border-radius: 0.5rem;
           display: flex;
           align-items: center;
           justify-content: center;
           cursor: pointer;
-          &:hover {
-            background-color: #eff3f3;
+          &.active {
+            background-color: $secondary-color;
+            svg {
+              path {
+                width: 80%;
+                height: 80%;
+                stroke: $white;
+              }
+            }
+          }
+        }
+        &-search {
+          width: 100%;
+          display: flex;
+          flex-direction: row;
+          gap: 0.5rem;
+          align-items: center;
+          padding: 0.55rem 1rem;
+          border-radius: 0.5rem;
+          border: 0.5px solid $gray;
+          input {
+            width: 100%;
+            border: none;
+            outline: none;
+            font-size: 10px;
+            line-height: 1.62;
+            color: $black;
+            font-family: "Poppins Light";
+          }
+          ::placeholder {
+            font-size: 10px;
+            line-height: 1.62;
+            color: $gray;
+          }
+          svg {
+            width: 16px;
+            height: 16px;
+            stroke: $gray;
+            stroke-width: 1px !important;
           }
         }
       }
+    }
+    &-products {
+      width: 100%;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 1rem;
     }
   }
 }
