--- a/src/pages/Homepage/Shopping/Shopping.module.scss
+++ b/src/pages/Homepage/Shopping/Shopping.module.scss
@@ -141,6 +141,22 @@
         }
       }
     }
+    &-empty {
+      border: 0.25px solid $gray;
+      border-radius: 0.25rem;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      p {
+        text-align: center;
+        font-family: "Poppins Light";
+        font-size: 12px;
+        color: $gray;
+        line-height: 1.62;
+      }
+    }
     &-products {
       width: 100%;
       display: grid;
