Add FZ-Poppins font files and update font paths in styles. Replace old Poppins font files with new FZ-Poppins variants and adjust SCSS variables accordingly. Update Header component text to reflect localization changes. Introduce ProductDetail component for product information display.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,24 +11,24 @@ $white: #ffffff;
 $font-path: "../assets/fonts/";
 
 // Poppins Font File Paths
-$font-poppins-thin: $font-path + "Poppins-Thin.otf";
-$font-poppins-thin-italic: $font-path + "Poppins-ThinItalic.otf";
-$font-poppins-extra-light: $font-path + "Poppins-ExtraLight.otf";
-$font-poppins-extra-light-italic: $font-path + "Poppins-ExtraLightItalic.otf";
-$font-poppins-light: $font-path + "Poppins-Light.otf";
-$font-poppins-light-italic: $font-path + "Poppins-LightItalic.otf";
-$font-poppins-regular: $font-path + "Poppins-Regular.otf";
-$font-poppins-italic: $font-path + "Poppins-Italic.otf";
-$font-poppins-medium: $font-path + "Poppins-Medium.otf";
-$font-poppins-medium-italic: $font-path + "Poppins-MediumItalic.otf";
-$font-poppins-semi-bold: $font-path + "Poppins-SemiBold.otf";
-$font-poppins-semi-bold-italic: $font-path + "Poppins-SemiBoldItalic.otf";
-$font-poppins-bold: $font-path + "Poppins-Bold.otf";
-$font-poppins-bold-italic: $font-path + "Poppins-BoldItalic.otf";
-$font-poppins-extra-bold: $font-path + "Poppins-ExtraBold.otf";
-$font-poppins-extra-bold-italic: $font-path + "Poppins-ExtraBoldItalic.otf";
-$font-poppins-black: $font-path + "Poppins-Black.otf";
-$font-poppins-black-italic: $font-path + "Poppins-BlackItalic.otf";
+$font-poppins-thin: $font-path + "FZ-Poppins-Thin.ttf";
+$font-poppins-thin-italic: $font-path + "FZ-Poppins-ThinItalic.ttf";
+$font-poppins-extra-light: $font-path + "FZ-Poppins-ExtraLight.ttf";
+$font-poppins-extra-light-italic: $font-path + "FZ-Poppins-ExtraLightItalic.ttf";
+$font-poppins-light: $font-path + "FZ-Poppins-Light.ttf";
+$font-poppins-light-italic: $font-path + "FZ-Poppins-LightItalic.ttf";
+$font-poppins-regular: $font-path + "FZ-Poppins-Regular.ttf";
+$font-poppins-italic: $font-path + "FZ-Poppins-Italic.ttf";
+$font-poppins-medium: $font-path + "FZ-Poppins-Medium.ttf";
+$font-poppins-medium-italic: $font-path + "FZ-Poppins-MediumItalic.ttf";
+$font-poppins-semi-bold: $font-path + "FZ-Poppins-SemiBold.ttf";
+$font-poppins-semi-bold-italic: $font-path + "FZ-Poppins-SemiBoldItalic.ttf";
+$font-poppins-bold: $font-path + "FZ-Poppins-Bold.ttf";
+$font-poppins-bold-italic: $font-path + "FZ-Poppins-BoldItalic.ttf";
+$font-poppins-extra-bold: $font-path + "FZ-Poppins-ExtraBold.ttf";
+$font-poppins-extra-bold-italic: $font-path + "FZ-Poppins-ExtraBoldItalic.ttf";
+$font-poppins-black: $font-path + "FZ-Poppins-Black.ttf";
+$font-poppins-black-italic: $font-path + "FZ-Poppins-BlackItalic.ttf";
 
 // // Layout
 $container-width: 92%;
