--- a/src/components/AttributeProduct/AttributeTab.module.scss
+++ b/src/components/AttributeProduct/AttributeTab.module.scss
@@ -56,4 +56,113 @@
     line-height: 1.6;
     color: #2d3748;
   }
+
+  &-infor {
+    &-container {
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+    }
+  }
+  &-value,
+  &-skill {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    > p:first-child {
+      font-family: "Poppins SemiBold";
+      font-size: 14px;
+      color: $black;
+    }
+  }
+  &-value {
+    &-item {
+      width: 64.5%;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 2rem;
+      row-gap: 0.5rem;
+    }
+
+    &-text {
+      display: flex;
+      align-items: start;
+      gap: 1rem;
+
+      p {
+        width: 100%;
+        font-family: "Poppins Regular";
+        font-size: 12px;
+        color: $gray;
+      }
+    }
+    &-tick {
+      margin-top: 0.2rem;
+      width: 14px;
+      height: 14px;
+      color: $primary-color;
+    }
+  }
+  &-skill {
+    &-text {
+      background-color: #eff3f3;
+      padding: 0.5rem 1rem;
+      border-radius: 3rem;
+      cursor: pointer;
+    }
+    &-item {
+      width: 64.5%;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      gap: 1rem;
+
+      p {
+        font-family: "Poppins Medium";
+        font-size: 12px;
+        color: $primary-color;
+      }
+    }
+  }
+  &-another {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    width: 64.5%;
+    > p:first-child {
+      font-family: "Poppins SemiBold";
+      font-size: 14px;
+      color: $black;
+    }
+    p {
+      font-family: "Poppins Regular";
+      font-size: 12px;
+    }
+    &-container {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+    }
+    &-item {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      > svg:first-child {
+        width: 32px;
+        height: 32px;
+        color: $black;
+      }
+      span {
+        font-family: "Poppins SemiBold";
+        font-size: 12px;
+        color: $black;
+      }
+      p {
+        font-family: "Poppins Regular";
+        font-size: 12px;
+        color: $primary-color;
+      }
+    }
+  }
 }
