--- a/src/components/Product/ProductItem.module.scss
+++ b/src/components/Product/ProductItem.module.scss
@@ -18,6 +18,7 @@
     width: 100%;
     img {
       width: 100%;
+      aspect-ratio: 2/1;
       border-radius: 0.5rem;
       height: 100%;
       object-fit: cover;
@@ -75,6 +76,22 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    &-book {
+      display: flex;
+      flex-direction: row;
+      gap: 0.5rem;
+      align-items: center;
+      svg {
+        width: 1rem;
+        height: 1rem;
+        stroke: $gray;
+      }
+      span {
+        font-family: "Poppins Regular";
+        font-size: 11px;
+        color: $gray;
+      }
+    }
     &-document {
       font-family: "Poppins Regular";
       font-size: 12px;
