--- a/src/components/ProductDetail/Detail/Detail.module.scss
+++ b/src/components/ProductDetail/Detail/Detail.module.scss
@@ -131,10 +131,31 @@
       flex-direction: column;
       gap: 1rem;
 
-      &-CTA {
+      &-share {
+        width: 50%;
+        height: 100%;
         display: flex;
         flex-direction: row;
         gap: 0.5rem;
+        align-items: center;
+        justify-content: flex-end;
+        gap: 0.5rem;
+        & .share,
+        & .favorite {
+          width: 2.2rem;
+          height: 2.2rem;
+          padding: 0.5rem;
+          border-radius: 50%;
+          cursor: pointer;
+          &:hover {
+            background-color: #eff3f3;
+          }
+        }
+      }
+
+      &-CTA {
+        display: flex;
+        flex-direction: row;
         align-items: center;
         justify-content: space-between;
         & .button {
