--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -38,16 +38,28 @@
     display: flex;
     align-items: center;
     padding: 0.5rem;
+    border-radius: 0.5rem;
+    transition: all 0.2s ease;
+
     &:hover {
       a {
         color: $black;
-        font-family: "Poppins SemiBold", "Poppins", sans-serif;
       }
     }
+
+    &--active {
+      a {
+        color: $black !important;
+        font-family: "Poppins Bold" !important;
+      }
+    }
+
     a {
       color: $gray;
       font-size: 11px;
-      font-family: "Poppins Light", "Poppins", sans-serif;
+      font-family: "Poppins", sans-serif;
+      font-weight: 300;
+      transition: color 0.2s ease, font-weight 0.2s ease;
     }
   }
   &-right {
