Enhance SearchIcon component with strokeColor prop for customizable styling. Update various SCSS files to improve mobile responsiveness and layout adjustments across components including Category, Filter, NoData, and ProductItem. Implement media queries for better display on smaller screens in Shopping and Introduction modules.

--- a/src/components/Category/Category.module.scss
+++ b/src/components/Category/Category.module.scss
@@ -71,3 +71,24 @@
 .CategoryItem--active svg path {
   stroke: $white !important;
 }
+
+@media (max-width: 425.5px) {
+  .Categories {
+    &-container {
+      grid-template-columns: repeat(3, 1fr);
+      gap: 1rem;
+    }
+    &-header {
+      display: none;
+    }
+  }
+  .CategoryItem {
+    gap: 0;
+    svg {
+      width: 2rem;
+    }
+    p {
+      font-size: 10px;
+    }
+  }
+}
