--- a/src/components/Product/ProductItem.module.scss
+++ b/src/components/Product/ProductItem.module.scss
@@ -5,6 +5,7 @@
   border: 0.5px solid $gray;
   border-radius: 0.75rem;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
   &-container {
     width: 100%;
     height: 100%;
@@ -136,6 +137,55 @@
         font-size: 11px;
         text-decoration: line-through;
         color: $gray;
+      }
+    }
+  }
+}
+
+@media (max-width: 425.5px) {
+  .ProductItem {
+    &-container {
+      gap: 1rem;
+    }
+    &-CTA {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 1rem;
+      &-button {
+        width: 100%;
+        border-radius: 0.5rem;
+      }
+    }
+    &-organization {
+      img {
+        width: 2rem;
+        height: 2rem;
+      }
+    }
+    &-info {
+      gap: 0.8rem;
+      &-title {
+        font-size: 14px;
+      }
+      &-subtitle {
+        font-size: 12px;
+      }
+    }
+    &-Subtitle {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 0.6rem;
+    }
+    &-Price {
+      padding: 0.5rem;
+      &-container {
+        gap: 0.25rem;
+        &-end {
+          font-size: 12px;
+        }
+        &-discount {
+          font-size: 10px;
+        }
       }
     }
   }
