--- a/src/components/ProductDetail/Detail/Detail.module.scss
+++ b/src/components/ProductDetail/Detail/Detail.module.scss
@@ -159,7 +159,9 @@
     display: flex;
     justify-content: space-between;
     gap: 1.5rem;
-
+    &-mobile {
+      display: none;
+    }
     &-content {
       width: 40%;
       border-radius: 0.5rem;
@@ -438,10 +440,9 @@
       display: flex;
       align-items: center;
       gap: 1rem;
-      padding-block: 1rem;
+      padding: 1rem;
       transition: all 0.2s ease;
       border-bottom: 0.1px solid $gray;
-      padding-inline: 1rem;
 
       &:hover {
         background-color: #eff3f3;
@@ -470,6 +471,113 @@
         color: $gray;
         margin: 0;
         line-height: 1.2;
+      }
+    }
+  }
+}
+
+@media (max-width: 425.5px) {
+  .Detail {
+    &-header {
+      flex-direction: column;
+      align-items: center;
+      gap: 1.5rem;
+      &-left {
+        width: 100%;
+        gap: 0.75rem;
+        &-title {
+          flex-direction: column;
+          align-items: center;
+          gap: 0.25rem;
+          h1 {
+            text-align: center;
+            font-size: 2.25rem;
+          }
+        }
+        &-share {
+          margin-top: 0;
+        }
+        & .share,
+        & .favorite {
+          margin-top: 0;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          svg {
+            width: 1.25rem;
+            height: 1.25rem;
+          }
+          & .share {
+            width: 1.5rem;
+            height: 1.5rem;
+            padding: 0.5rem;
+            border-radius: 50%;
+            cursor: pointer;
+            &:hover {
+              background-color: #eff3f3;
+            }
+          }
+        }
+        &-info {
+          justify-content: center;
+        }
+      }
+      &-right {
+        width: 100%;
+        align-items: center;
+        gap: 1.5rem;
+      }
+    }
+    &-button {
+      width: 80%;
+    }
+    &-course {
+      height: 100%;
+      flex-direction: column-reverse;
+      img {
+        width: 100%;
+        aspect-ratio: 1/1;
+      }
+      &-content {
+        display: none;
+      }
+      &-mobile {
+        display: block;
+        border-radius: 0.5rem;
+        border: 0.25px solid $gray;
+        padding: 1rem;
+        margin-top: 1rem;
+        button {
+          font-family: "Poppins Medium";
+          font-size: 14px;
+          color: $gray;
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          width: 100%;
+          transition: all 0.2s ease;
+        }
+        &-item {
+          height: 310px;
+          overflow-y: scroll;
+        }
+        &-content {
+          display: flex;
+        }
+      }
+    }
+    &-chapter {
+      &-list {
+        padding: 0;
+        gap: 0;
+      }
+      &-item {
+        padding-block: 1.5rem;
+        border-top: 0.1px solid $gray;
+        border-bottom: 0;
+        &:first-child {
+          margin-top: 1rem;
+        }
       }
     }
   }
