--- a/src/components/AttributeProduct/AttributeTab.module.scss
+++ b/src/components/AttributeProduct/AttributeTab.module.scss
@@ -322,3 +322,54 @@
     }
   }
 }
+
+@media (max-width: 425.5px) {
+  .AttributeTab {
+    &-infor {
+      &-container {
+        padding: 0.5rem 0;
+        gap: 1.5rem;
+      }
+    }
+    &-value {
+      &-item {
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
+      }
+    }
+    &-skill {
+      &-item {
+        width: 100%;
+        row-gap: 0.5rem;
+      }
+    }
+    &-another {
+      width: 100%;
+      gap: 1.5rem;
+      &-container {
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 1rem;
+        row-gap: 1.5rem;
+        margin-top: 0;
+      }
+    }
+    &-rating {
+      &-container {
+        gap: 1.5rem;
+      }
+      &-top {
+        flex-direction: column;
+        &-left,
+        &-right {
+          width: 100%;
+        }
+        &-left {
+          min-height: 200px;
+        }
+        &-right {
+          gap: 1rem;
+        }
+      }
+    }
+  }
+}
