--- a/src/components/NoData/NoData.module.scss
+++ b/src/components/NoData/NoData.module.scss
@@ -5,6 +5,7 @@
   border-radius: 0.25rem;
   width: 100%;
   height: 100%;
+  min-height: 550px;
   display: flex;
   justify-content: center;
   align-items: center;
