--- a/src/pages/Auth/Auth.module.scss
+++ b/src/pages/Auth/Auth.module.scss
@@ -64,6 +64,7 @@
     }
 
     input {
+      width: 100%;
       padding: 0.75rem 1rem;
       border: 1px solid #e5e7eb;
       border-radius: 0.5rem;
@@ -82,6 +83,33 @@
       &::placeholder {
         color: $gray;
       }
+    }
+  }
+
+  &-password-wrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+
+    input {
+      padding-right: 3rem;
+    }
+  }
+
+  &-eye-icon {
+    position: absolute;
+    right: 1rem;
+    top: 50%;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: $gray;
+    transition: color 0.2s ease;
+    padding: 0.25rem;
+
+    &:hover {
+      color: $black;
     }
   }
 
