--- a/src/pages/MyFavorite/MyFavorite.module.scss
+++ b/src/pages/MyFavorite/MyFavorite.module.scss
@@ -1,6 +1,6 @@
 @import "../../styles/variables.scss";
 
-.MyCourse {
+.MyFavorite {
   width: 100%;
   background-color: $background-color;
   &-container {
@@ -96,13 +96,5 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 1rem;
-  }
-}
-
-@media (max-width: 480px) {
-  .MyCourse {
-    &-list {
-      grid-template-columns: repeat(1, 1fr);
-    }
   }
 }
