Refactor Vite configuration to optimize build process with manual chunking for vendor libraries. Update SCSS imports to use the new @use syntax for better modularity and maintainability. Adjust hover styles in multiple components to utilize color adjustments instead of darkening. Remove unused favorite service file.

--- a/src/components/AuthButton/AuthButton.module.scss
+++ b/src/components/AuthButton/AuthButton.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables.scss";
+@use "../../styles/variables.scss" as *;
 
 .AuthButton {
   display: flex;
@@ -28,7 +28,7 @@
     transition: all 0.2s ease;
 
     &:hover {
-      background-color: darken($primary-color, 10%);
+      background-color: color.adjust($primary-color, $lightness: -10%);
       transform: translateY(-1px);
     }
 
