Refactor SCSS files to replace @import with @use syntax for improved modularity. Update hover styles in Auth module to utilize color adjustments instead of darkening.

--- a/src/components/Selection/Selection.module.scss
+++ b/src/components/Selection/Selection.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles/_variables.scss"; // Adjust path if needed
+@use "../../styles/variables.scss" as *;
 
 .Selection {
   width: 100%;
