--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,11 +3,16 @@
   padding: 1rem 0;
   border-top: 1px solid #ddd;
 
-  &__container {
+  &-container {
     max-width: 1200px;
     margin: 0 auto;
     text-align: center;
     color: #888;
     padding: 0 1rem;
+    p {
+      text-align: center;
+      font-family: "Poppins Regular";
+      font-size: 12px;
+    }
   }
 }
