--- a/src/components/AuthButton/AuthButton.module.scss
+++ b/src/components/AuthButton/AuthButton.module.scss
@@ -48,7 +48,7 @@
     transition: all 0.2s ease;
 
     &:hover {
-      background-color: darken($gray, 15%);
+      background-color: color.adjust($gray, $lightness: -15%);
       transform: translateY(-1px);
     }
 
