Refactor RecommendedProducts component: Update styles for improved layout and responsiveness, implement personalized recommendation display with a new suggest section, and enhance loading state management. Adjust ProductDetail styles for better height handling.

--- a/src/components/ProductDetail/Detail/Detail.module.scss
+++ b/src/components/ProductDetail/Detail/Detail.module.scss
@@ -156,7 +156,7 @@
 
   &-course {
     width: 100%;
-    min-height: 55vh;
+    max-height: 55vh;
     display: flex;
     justify-content: space-between;
     gap: 1.5rem;
