--- a/src/pages/Homepage/Shopping/Shopping.module.scss
+++ b/src/pages/Homepage/Shopping/Shopping.module.scss
@@ -332,6 +332,9 @@
         font-size: 12px;
       }
     }
+    &-pagination {
+      display: none;
+    }
     &-categories {
       height: 130px;
     }
